Added type to address element to indicate kind of address (MAC, IPv4, hostname)
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1153086 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -33,16 +33,13 @@
     %public_addresses<
       - @instance.public_addresses.each do |address|
         - if address.class.eql?(Hash) and address[:address]!=""
-          %address{ :port => address[:port], :type => address[:type], :mac => address[:mac] }<
-            =address[:address]
+          =format_address(address[:address], :port => address[:port], :type => address[:type], :mac => address[:mac])
         - elsif address.class.eql?(String)
-          %address<
-            =address
+          =format_address(address)
   - if @instance.private_addresses
     %private_addresses<
       - @instance.private_addresses.each do |address|
-        %address<
-          =address
+        =format_address(address)
   - if @instance.firewalls
     %firewalls<
       - @instance.firewalls.each do |firewall|
