--- a/server/views/instances/show.xml.haml
+++ b/server/views/instances/show.xml.haml
@@ -49,11 +49,11 @@
       - if @instance.authn_feature_failed?
         %error  #{@instance.authn_error}
       - else
-        - if driver_auth_feature_name == 'password'
+        - if @instance.password
           %login
             %username #{@instance.username}
-            %password #{@instance.password}
-        - if driver_auth_feature_name == 'key'
+            %password=cdata(@instance.password)
+        - if @instance.keyname
           %login
             %keyname #{@instance.keyname}
 
