Client: Fixed destroy operation on firewall resource
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1155306 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/firewalls/index.xml.haml
+++ b/server/views/firewalls/index.xml.haml
@@ -2,6 +2,9 @@
 %firewalls
   - @firewalls.each do |firewall|
     %firewall{:href => firewall_url(firewall.id), :id => firewall.id}
+      %actions
+        %link{ :rel => :destroy, :href => destroy_firewall_url(firewall.id), :method => :delete, :id => firewall.id}
+        %link{ :rel => :add_rule, :href => "#{firewall_url(firewall.name)}/rules", :method => :post, :id => firewall.id}
       - firewall.attributes.select{ |attr| attr != :id && attr!= :rules}.each do |attribute|
         - haml_tag("#{attribute}".tr('-', '_'), :<) do
           - if [:name, :description].include?(attribute)
@@ -12,6 +15,8 @@
       %rules
         - firewall.rules.each do |rule|
           %rule{:id => rule.id}
+          %actions
+            %link{ :rel => :rule, :href => "#{firewall_url(firewall.name)}/#{rule.id}", :method => :delete, :id =>rule.id, :rel => :destroy }
             - rule.attributes.select{|attr| attr != :sources && attr != :id}.each do |rule_attrib|
               - haml_tag("#{rule_attrib}".tr('-', '_'), :<) do
                 - haml_concat rule.send(rule_attrib)
