Mock: Support for user-data testing
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1155541 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -12,6 +12,13 @@
     %div{ 'data-role' => :collapsible, 'data-collapsed' => "true"}
       %h3 Additional parameters
 
+      - if driver_has_feature?(:user_data)
+        %div{ 'data-role' => :fieldcontain }
+          %label{ :for => :user_data} Base64 encoded user-data:
+          %textarea{ :id => :user_data, :name => :user_data, :value => '' }
+          %br/
+          %a{ :href => "", :onclick => 'encodeb64();', :'data-ajax' => 'false'} Encode data
+
       - if driver_has_feature?(:instance_count)
         %div{ 'data-role' => :fieldcontain }
           %label{ :for => :instance_count} # of instances to be launched:
