--- a/server/views/firewalls/new_rule.html.haml
+++ b/server/views/firewalls/new_rule.html.haml
@@ -7,13 +7,14 @@
       %input{ :type => :text, :id => :protocol, :name => :protocol, :value => '', :size => 10 }
     %div{ 'data-role' => :fieldcontain }
       %label{ :for => :name} From port:
-      %input{ :type => :text, :id => :from_port, :name => :from_port, :value => '', :size => 10 }
+      %input{ :type => :text, :id => :port_from, :name => :port_from, :value => '', :size => 10 }
     %div{ 'data-role' => :fieldcontain }
       %label{ :for => :name} To port:
-      %input{ :type => :text, :id => :to_port, :name => :to_port, :value => '', :size => 10 }
+      %input{ :type => :text, :id => :port_to, :name => :port_to, :value => '', :size => 10 }
     %div{ 'data-role' => :fieldcontain }
       %a{ :href => "javascript:;", :onclick => "make_fields('address');"} Add source IP address
       %br
       %a{ :href => "javascript:;", :onclick => "make_fields('group');"} Add source group
+      %br
+      #new_rule_form_fields
     %button{ :type => :submit} Create
-
