Replace 'blob' with 'blob_id' in create blob operation
Change also made to API docs for site with reference to 'blob' parameter in
POST create blob.

Signed-off-by: marios <marios@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1160542 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/blobs/new.html.haml
+++ b/server/views/blobs/new.html.haml
@@ -5,7 +5,7 @@
     %div{ 'data-role' => :fieldcontain }
       %label
         Blob Name:
-      %input{ :name => 'blob', :size => 512}/
+      %input{ :name => 'blob_id', :size => 512}/
       %input{ :type => "hidden", :name => "meta_params", :value => "0"}
     %a{ :href => "javascript:;", :onclick => "more_fields();"} Add Metadata
     %div{ :id => "metadata_holder", :style => "display: none;", :'data-role' => :fieldcontain}
