Fix typo in HTML view of bucket
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1160545 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/buckets/show.html.haml
+++ b/server/views/buckets/show.html.haml
@@ -8,7 +8,7 @@
       %p{ :'data-role' => 'fieldcontain'}=@bucket.name
     %li{ :'data-role' => 'list-divider'} Size
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@bucket.name
+      %p{ :'data-role' => 'fieldcontain'}=@bucket.size
     %li{ :'data-role' => 'list-divider'}
       Blobs
     - @bucket.blob_list.each do |blob|
