Removed AJAX from new instance UI
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1161567 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -2,7 +2,7 @@
 =subheader @image.description
 
 %div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
-  %form{ :action => instances_url, :method => :post, :class => :new_instance }
+  %form{ :action => instances_url, :method => :post, :class => :new_instance, :'data-ajax' => 'false'}
     %input{ :name => :image_id, :type => :hidden, :value => @instance.image_id }/
 
     %div{ 'data-role' => :fieldcontain }
