UI: New instance UI is not longer showing the name field when backend does not support it. VSphere: Added exception when image_id not exists on create_instance
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1170218 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -5,9 +5,10 @@
   %form{ :action => instances_url, :method => :post, :class => :new_instance, :'data-ajax' => 'false'}
     %input{ :name => :image_id, :type => :hidden, :value => @instance.image_id }/
 
-    %div{ 'data-role' => :fieldcontain }
-      %label{ :for => :name} Instance name:
-      %input{ :type => :text, :id => :name, :name => :name, :value => '' }
+    - if driver_has_feature?(:user_name)
+      %div{ 'data-role' => :fieldcontain }
+        %label{ :for => :name} Instance name:
+        %input{ :type => :text, :id => :name, :name => :name, :value => '' }
 
     %div{ 'data-role' => :collapsible, 'data-collapsed' => "true"}
       %h3 Additional parameters
