DTACLOUD-83: Fixed the snapshot text
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1178378 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/show.html.haml
+++ b/server/views/storage_volumes/show.html.haml
@@ -26,7 +26,7 @@
     %li
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
         - if ["AVAILABLE", "IN-USE"].include?(@storage_volume.state)
-          =link_to_action "Snaphot", api_url_for("storage_snapshots/new?volume_id=#{@storage_volume.id}"), :get
+          =link_to_action "Snapshot", api_url_for("storage_snapshots/new?volume_id=#{@storage_volume.id}"), :get
           - unless @storage_volume.instance_id
             =link_to_action "Delete", destroy_storage_volume_url(@storage_volume.id), :delete
             =link_to_action "Attach", api_url_for("storage_volumes/attach?id=#{@storage_volume.id}"), :get
