* views/storage_volumes/show.html.haml: fix link to volume
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1178844 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/storage_volumes/show.html.haml
+++ b/server/views/storage_volumes/show.html.haml
@@ -20,8 +20,11 @@
       %p{ :'data-role' => 'fieldcontain'}=@storage_volume.state
     %li{ :'data-role' => 'list-divider'} Attached to
     %li
-      %a{ :href => instance_url( @storage_volume.instance_id) + ' - ' + @storage_volume.device.to_s}
-        =@storage_volume.instance_id || 'unknown'
+      %a{ :href => instance_url( @storage_volume.instance_id)}
+        = @storage_volume.instance_id || 'unknown'
+    %li{ :'data-role' => 'list-divider'} Device
+    %li
+      %p{ :'data-role' => 'fieldcontain'}= @storage_volume.device
     %li{ :'data-role' => 'list-divider'} Actions
     %li
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
