--- a/server/views/error.html.haml
+++ b/server/views/error.html.haml
@@ -2,11 +2,11 @@
 %html
   %head
     %title Deltacloud API #{settings.version}
-    = stylesheet_link_tag '/stylesheets/jquery.mobile-1.0b1.min.css'
+    = stylesheet_link_tag '/stylesheets/jquery.mobile-1.0r1.min.css'
     = stylesheet_link_tag '/stylesheets/new.css'
     %script{:type => "text/javascript", :src => "/javascripts/jquery.min.js" }
     %script{:type => "text/javascript", :src => "/javascripts/application.js" }
-    %script{:type => "text/javascript", :src => "/javascripts/jquery.mobile-1.0b1.min.js" }
+    %script{:type => "text/javascript", :src => "/javascripts/jquery.mobile-1.0rc1.min.js" }
     :javascript
       $(document).ready(function() {
         $(document).bind("mobileinit", function(){
