Core: Fixed validation for Range properties
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1181074 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/error.html.haml
+++ b/server/views/error.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title Deltacloud API #{settings.version}
-    = stylesheet_link_tag '/stylesheets/jquery.mobile-1.0r1.min.css'
+    = stylesheet_link_tag '/stylesheets/jquery.mobile-1.0rc1.min.css'
     = stylesheet_link_tag '/stylesheets/new.css'
     %script{:type => "text/javascript", :src => "/javascripts/jquery.min.js" }
     %script{:type => "text/javascript", :src => "/javascripts/application.js" }
