Site: Replaced static news with twitter updates
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@1185060 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/index.haml
+++ b/site/content/index.haml
@@ -39,10 +39,7 @@ filter: haml
   .recent
     %h2
       News
-    %ul
-      - all_news.each do |item|
-        %li
-          = item
+      .tweet
   %br
   %br
 #popups{ :style => "display:none;" }
